# libzakauthedb

./: .gitignore  Makefile.am  README  autogen.sh  config.h.in  configure.ac
data/: Makefile.am  autedb.sql  autedb_confi_schema.xml
data/libaute-db/: Makefile.am
data/libaute-db/form/: Makefile.am  autedb.form  user.form
data/libaute-db/glade/: Makefile.am  autedb.glade
data/libaute-db/gui/: Makefile.am  autedb.glade  autedb.gui
data/libautedb/glade/: autedb.glade
data/libzakauthedb/form/: Makefile.am  user.form
data/libzakauthedb/gui/: Makefile.am  autedb.gui
src/: Makefile.am  aute_db.c  aute_db.h  user.c  user.h  zakauthedb.plugin
tests/: Makefile.am  test.c  test_confi.c  test_confi.conf  test_nogui.c
tools/: Makefile.am  aute_db_mkpwd.c  zakauthdb_mkpwd.c  zakauthedb_mkpwd.c
